UI: Fix stretched tab icons
(integrated from master branch change 9.2.1-1611-g07d47b4 by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/chrome/komodo/skin/global/icons.less
+++ b/src/chrome/komodo/skin/global/icons.less
@@ -454,7 +454,7 @@ dropmarker {
 
 image.tab-icon
 {
-    max-width: 14px;
+    max-width: 14px !important;
     height: 14px;
 }
 
